--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,11 @@ dependencies {
 
     //For Twitter Emoji Keyboard
     implementation "com.vanniktech:emoji-twitter:0.8.0"
+
+    //For GIF
+    implementation 'com.giphy.sdk:ui:2.1.7'
+
+    //----------------Glide--------------------//
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
